src/objects/SAR_Emails__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Alliances_Email__c</fullName>
        <label>Alliances Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HelpDesk_Email__c</fullName>
        <label>HelpDesk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Live_Request_Email__c</fullName>
        <label>Live Request Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Predictive_Products_Email__c</fullName>
        <label>Predictive Products Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Software_Delivery_Email__c</fullName>
        <label>Software Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SupportOperations_Email__c</fullName>
        <label>SupportOperations Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TDC_MGMT_Email__c</fullName>
        <label>TDC MGMT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ThunderheadEmail__c</fullName>
        <label>ThunderheadEmail</label>
        <type>Email</type>
    </fields>
    <label>SAR Emails</label>
</CustomObject>